--- a/QB.ipynb
+++ b/QB.ipynb
@@ -534,11 +534,11 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Ridge(alpha=4)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Ridge</label><div class=\"sk-toggleable__content\"><pre>Ridge(alpha=4)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "{'mean mse': 9.589303594717714,\n",
-       " 'model': LinearRegression(),\n",
-       " 'features': Index(['Passing_Yds', 'Passing_Td', '20+ YDS', '30+ YDS', '40+ YDS'], dtype='object'),\n",
-       " 'coefficients': array([-4.60484691,  6.68898043,  1.44877185,  5.04781461, -0.06748839])}"
+       "Ridge(alpha=4)"
       ]
      },
      "execution_count": 5,
@@ -548,12 +548,22 @@
    ],
    "source": [
     "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "y = QB['y']\n",
     "X = QB.drop(['y', 'FPTS/G'], axis=1)\n",
     "\n",
-    "info = football.getBestFeatures(X, y)\n",
-    "info"
+    "# Perform feature selection\n",
+    "X_selected, optimal_columns = football.getBestFeatures(X, y)\n",
+    "\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Get optimal model\n",
+    "model = football.get_model(X_train, y_train)\n",
+    "model"
    ]
   },
   {
@@ -562,10 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coefficients = info[\"coefficients\"]\n",
-    "features = info['features']\n",
-    "test_y = QB_2021['y']\n",
-    "test_x = QB_2021[features]"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -574,8 +581,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "values = test_x.mul(coefficients)\n",
-    "predictions = values.sum(axis = 1)"
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Reset index of y_test\n",
+    "y_test = y_test.reset_index(drop=True)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Make results df to see visual per player\n",
+    "results = pd.DataFrame()\n",
+    "\n",
+    "results['Y_pred'] = y_pred\n",
+    "results['Y_true'] = y_test\n",
+    "results['difference'] = results['Y_true'] - results['Y_pred']"
    ]
   },
   {
@@ -584,31 +602,292 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame()\n",
-    "results['actual'] = test_y\n",
-    "results['predictions'] = predictions\n",
-    "results['difference'] = results['actual'] - results['predictions']"
+    "QB_2022 = football.prepare_QB(\"2022\", True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = QB_2022.drop(['y', 'FPTS/G'], axis=1)\n",
+    "\n",
+    "X_selected = X[optimal_columns]\n",
+    "\n",
+    "y_pred = model.predict(X_selected)\n",
+    "\n",
+    "# Make prediction based df for next year\n",
+    "\n",
+    "pred_df = pd.DataFrame()\n",
+    "\n",
+    "pred_df['Player'] = X['Player']\n",
+    "pred_df['2023_pred'] = y_pred\n",
+    "pred_df['2022_ppg'] = QB_2022['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>2023_pred</th>\n",
+       "      <th>2022_ppg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Patrick Mahomes II</td>\n",
+       "      <td>20.950595</td>\n",
+       "      <td>25.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tua Tagovailoa</td>\n",
+       "      <td>19.911187</td>\n",
+       "      <td>18.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jalen Hurts</td>\n",
+       "      <td>19.005434</td>\n",
+       "      <td>25.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Joe Burrow</td>\n",
+       "      <td>18.909920</td>\n",
+       "      <td>21.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Josh Allen</td>\n",
+       "      <td>18.868694</td>\n",
+       "      <td>24.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Russell Wilson</td>\n",
+       "      <td>18.490485</td>\n",
+       "      <td>15.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Derek Carr</td>\n",
+       "      <td>18.337143</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Jared Goff</td>\n",
+       "      <td>18.158022</td>\n",
+       "      <td>17.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Kirk Cousins</td>\n",
+       "      <td>18.031488</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Geno Smith</td>\n",
+       "      <td>17.749238</td>\n",
+       "      <td>18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Ryan Tannehill</td>\n",
+       "      <td>17.552761</td>\n",
+       "      <td>13.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Dak Prescott</td>\n",
+       "      <td>17.407728</td>\n",
+       "      <td>17.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Justin Herbert</td>\n",
+       "      <td>16.996766</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Davis Mills</td>\n",
+       "      <td>16.960836</td>\n",
+       "      <td>13.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Aaron Rodgers</td>\n",
+       "      <td>16.732684</td>\n",
+       "      <td>14.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Mac Jones</td>\n",
+       "      <td>16.568613</td>\n",
+       "      <td>12.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Jimmy Garoppolo</td>\n",
+       "      <td>16.555188</td>\n",
+       "      <td>15.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Tom Brady</td>\n",
+       "      <td>16.550891</td>\n",
+       "      <td>16.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Andy Dalton</td>\n",
+       "      <td>16.298050</td>\n",
+       "      <td>13.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Trevor Lawrence</td>\n",
+       "      <td>15.980681</td>\n",
+       "      <td>17.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Justin Fields</td>\n",
+       "      <td>15.926205</td>\n",
+       "      <td>20.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Lamar Jackson</td>\n",
+       "      <td>15.692335</td>\n",
+       "      <td>20.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Matt Ryan</td>\n",
+       "      <td>15.666410</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Marcus Mariota</td>\n",
+       "      <td>15.494324</td>\n",
+       "      <td>15.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Jacoby Brissett</td>\n",
+       "      <td>15.096954</td>\n",
+       "      <td>12.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Baker Mayfield</td>\n",
+       "      <td>14.986084</td>\n",
+       "      <td>10.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Kyler Murray</td>\n",
+       "      <td>14.705637</td>\n",
+       "      <td>18.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Daniel Jones</td>\n",
+       "      <td>14.630977</td>\n",
+       "      <td>18.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Kenny Pickett</td>\n",
+       "      <td>13.620602</td>\n",
+       "      <td>12.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "12.797572610941982"
+       "                Player  2023_pred  2022_ppg\n",
+       "0   Patrick Mahomes II  20.950595      25.2\n",
+       "1       Tua Tagovailoa  19.911187      18.4\n",
+       "2          Jalen Hurts  19.005434      25.6\n",
+       "3           Joe Burrow  18.909920      21.7\n",
+       "4           Josh Allen  18.868694      24.3\n",
+       "5       Russell Wilson  18.490485      15.7\n",
+       "6           Derek Carr  18.337143      15.5\n",
+       "7           Jared Goff  18.158022      17.1\n",
+       "8         Kirk Cousins  18.031488      18.0\n",
+       "9           Geno Smith  17.749238      18.5\n",
+       "10      Ryan Tannehill  17.552761      13.9\n",
+       "11        Dak Prescott  17.407728      17.8\n",
+       "12      Justin Herbert  16.996766      17.0\n",
+       "13         Davis Mills  16.960836      13.1\n",
+       "14       Aaron Rodgers  16.732684      14.8\n",
+       "15           Mac Jones  16.568613      12.9\n",
+       "16     Jimmy Garoppolo  16.555188      15.3\n",
+       "17           Tom Brady  16.550891      16.5\n",
+       "18         Andy Dalton  16.298050      13.1\n",
+       "19     Trevor Lawrence  15.980681      17.9\n",
+       "20       Justin Fields  15.926205      20.5\n",
+       "21       Lamar Jackson  15.692335      20.3\n",
+       "22           Matt Ryan  15.666410      14.0\n",
+       "23      Marcus Mariota  15.494324      15.8\n",
+       "24     Jacoby Brissett  15.096954      12.5\n",
+       "25      Baker Mayfield  14.986084      10.8\n",
+       "26        Kyler Murray  14.705637      18.9\n",
+       "27        Daniel Jones  14.630977      18.4\n",
+       "28       Kenny Pickett  13.620602      12.2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.loc[:, 'difference'].mean()"
+    "sorted_2023 = pred_df.sort_values(by='2023_pred', ascending=False).reset_index(drop=True)\n",
+    "sorted_2023"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
