--- a/TE.ipynb
+++ b/TE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "[489 rows x 29 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,89 +551,430 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'mean mse': 2.3129075672044235,\n",
-       " 'model': SGDRegressor(),\n",
-       " 'features': Index(['REC', 'TGT', 'Receiving_Yds', '% TM', '10+ YDS'], dtype='object'),\n",
-       " 'coefficients': array([1.73901135, 1.82897664, 1.77772682, 1.54692359, 1.38747315])}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "y = TE['y']\n",
     "X = TE.drop(['y', 'FPTS/G'], axis=1)\n",
     "\n",
-    "info = football.getBestFeatures(X, y)\n",
-    "info"
+    "# Perform feature selection\n",
+    "X_selected, optimal_columns = football.getBestFeatures(X, y)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Get optimal model\n",
+    "model = football.get_model(X_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Now that we have our model, lets test on our test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_y = pd.DataFrame()\n",
-    "coefficients = info[\"coefficients\"]\n",
-    "features = info['features']\n",
-    "test_y['player'] = TE_2021['Player']\n",
-    "test_y['y'] = TE_2021['y']\n",
-    "test_x = TE_2021[features]"
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### See how our model did"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "values = test_x.mul(coefficients)\n",
-    "predictions = values.sum(axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Reset index of y_test\n",
+    "y_test = y_test.reset_index(drop=True)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Make results df to see visual per player\n",
     "results = pd.DataFrame()\n",
-    "results['player'] = test_y['player']\n",
-    "results['actual'] = test_y['y']\n",
-    "results['predictions'] = predictions\n",
-    "results['difference'] = results['actual'] - results['predictions']"
+    "\n",
+    "results['Y_pred'] = y_pred\n",
+    "results['Y_true'] = y_test\n",
+    "results['difference'] = results['Y_true'] - results['Y_pred']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Lastly, let's predict next year's rankings for tight ends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TE_2022 = football.prepare_TE(\"2022\", True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = TE_2022.drop(['y', 'FPTS/G'], axis=1)\n",
+    "\n",
+    "X_selected = X[optimal_columns]\n",
+    "\n",
+    "y_pred = model.predict(X_selected)\n",
+    "\n",
+    "# Make prediction based df for next year\n",
+    "\n",
+    "pred_df = pd.DataFrame()\n",
+    "\n",
+    "pred_df['Player'] = X['Player']\n",
+    "pred_df['2023_pred'] = y_pred\n",
+    "pred_df['2022_ppg'] = TE_2022['y']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Sort based on projected points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>2023_pred</th>\n",
+       "      <th>2022_ppg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Travis Kelce</td>\n",
+       "      <td>8.763374</td>\n",
+       "      <td>12.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mark Andrews</td>\n",
+       "      <td>7.601719</td>\n",
+       "      <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T.J. Hockenson</td>\n",
+       "      <td>7.478496</td>\n",
+       "      <td>7.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dalton Schultz</td>\n",
+       "      <td>6.673049</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>George Kittle</td>\n",
+       "      <td>6.479075</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Gerald Everett</td>\n",
+       "      <td>6.459460</td>\n",
+       "      <td>5.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Evan Engram</td>\n",
+       "      <td>6.217107</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Pat Freiermuth</td>\n",
+       "      <td>6.078860</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>David Njoku</td>\n",
+       "      <td>5.326142</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Cole Kmet</td>\n",
+       "      <td>5.116429</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Jordan Akins</td>\n",
+       "      <td>4.985567</td>\n",
+       "      <td>5.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Dawson Knox</td>\n",
+       "      <td>4.828597</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Juwan Johnson</td>\n",
+       "      <td>4.677558</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Tyler Higbee</td>\n",
+       "      <td>4.539261</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Hayden Hurst</td>\n",
+       "      <td>4.432042</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Robert Tonyan</td>\n",
+       "      <td>4.380930</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Mike Gesicki</td>\n",
+       "      <td>4.353555</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Tyler Conklin</td>\n",
+       "      <td>4.207287</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Chigoziem Okonkwo</td>\n",
+       "      <td>4.127765</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Cade Otton</td>\n",
+       "      <td>4.003283</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Hunter Henry</td>\n",
+       "      <td>3.903687</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Isaiah Likely</td>\n",
+       "      <td>3.859274</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Colby Parkinson</td>\n",
+       "      <td>3.802303</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Austin Hooper</td>\n",
+       "      <td>3.745957</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Will Dissly</td>\n",
+       "      <td>3.444103</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Noah Fant</td>\n",
+       "      <td>3.177654</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Foster Moreau</td>\n",
+       "      <td>2.873534</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Noah Gray</td>\n",
+       "      <td>2.518279</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Mo Alie-Cox</td>\n",
+       "      <td>2.223191</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Tommy Tremble</td>\n",
+       "      <td>2.082014</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Harrison Bryant</td>\n",
+       "      <td>1.768494</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Brock Wright</td>\n",
+       "      <td>1.742040</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>C.J. Uzomah</td>\n",
+       "      <td>1.671010</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Logan Thomas</td>\n",
+       "      <td>1.405823</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Kylen Granson</td>\n",
+       "      <td>1.292386</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Taysom Hill</td>\n",
+       "      <td>1.015347</td>\n",
+       "      <td>8.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2.3172471411940663"
+       "               Player  2023_pred  2022_ppg\n",
+       "0        Travis Kelce   8.763374      12.1\n",
+       "1        Mark Andrews   7.601719       7.8\n",
+       "2      T.J. Hockenson   7.478496       7.6\n",
+       "3      Dalton Schultz   6.673049       5.7\n",
+       "4       George Kittle   6.479075       9.4\n",
+       "5      Gerald Everett   6.459460       5.4\n",
+       "6         Evan Engram   6.217107       6.1\n",
+       "7      Pat Freiermuth   6.078860       5.7\n",
+       "8         David Njoku   5.326142       6.0\n",
+       "9           Cole Kmet   5.116429       5.7\n",
+       "10       Jordan Akins   4.985567       5.3\n",
+       "11        Dawson Knox   4.828597       5.8\n",
+       "12      Juwan Johnson   4.677558       5.8\n",
+       "13       Tyler Higbee   4.539261       5.0\n",
+       "14       Hayden Hurst   4.432042       4.0\n",
+       "15      Robert Tonyan   4.380930       3.5\n",
+       "16       Mike Gesicki   4.353555       3.9\n",
+       "17      Tyler Conklin   4.207287       4.3\n",
+       "18  Chigoziem Okonkwo   4.127765       4.1\n",
+       "19         Cade Otton   4.003283       3.2\n",
+       "20       Hunter Henry   3.903687       3.9\n",
+       "21      Isaiah Likely   3.859274       4.0\n",
+       "22    Colby Parkinson   3.802303       3.2\n",
+       "23      Austin Hooper   3.745957       3.3\n",
+       "24        Will Dissly   3.444103       3.5\n",
+       "25          Noah Fant   3.177654       4.3\n",
+       "26      Foster Moreau   2.873534       3.7\n",
+       "27          Noah Gray   2.518279       2.5\n",
+       "28        Mo Alie-Cox   2.223191       2.5\n",
+       "29      Tommy Tremble   2.082014       2.2\n",
+       "30    Harrison Bryant   1.768494       2.2\n",
+       "31       Brock Wright   1.742040       3.3\n",
+       "32        C.J. Uzomah   1.671010       2.5\n",
+       "33       Logan Thomas   1.405823       2.9\n",
+       "34      Kylen Granson   1.292386       2.3\n",
+       "35        Taysom Hill   1.015347       8.6"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.loc[:, 'difference'].mean()"
+    "sorted_2023 = pred_df.sort_values(by='2023_pred', ascending=False).reset_index(drop=True)\n",
+    "sorted_2023"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
