--- a/RB.ipynb
+++ b/RB.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +536,7 @@
        "[752 rows x 27 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,104 +551,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "{'mean mse': 6.167367347237224,\n",
-       " 'model': LinearRegression(),\n",
-       " 'features': Index(['ATT', 'Rushing_Yds', 'Rushing_Td', 'YBCON', '10+ YDS'], dtype='object'),\n",
-       " 'coefficients': array([-1.42411843,  9.9968902 ,  7.07027232,  1.03632323, -0.29948967])}"
+       "LinearRegression()"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "y = RB['y']\n",
     "X = RB.drop(['y', 'FPTS/G'], axis=1)\n",
     "\n",
-    "info = football.getBestFeatures(X, y)\n",
-    "info"
+    "# Perform feature selection\n",
+    "X_selected, optimal_columns = football.getBestFeatures(X, y)\n",
+    "\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Get optimal model\n",
+    "model = football.get_model(X_train, y_train)\n",
+    "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         Jonathan Taylor\n",
-       "1           Austin Ekeler\n",
-       "2               Joe Mixon\n",
-       "3            Najee Harris\n",
-       "4            James Conner\n",
-       "             ...         \n",
-       "83            Carlos Hyde\n",
-       "87    Demetric Felton Jr.\n",
-       "89          Elijhaa Penny\n",
-       "90           Salvon Ahmed\n",
-       "91          JaMycal Hasty\n",
-       "Name: Player, Length: 76, dtype: object"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RB_2021['Player']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_y = pd.DataFrame()\n",
-    "coefficients = info[\"coefficients\"]\n",
-    "features = info['features']\n",
-    "test_y['player'] = RB_2021['Player']\n",
-    "test_y['y'] = RB_2021['y']\n",
-    "test_x = RB_2021[features]"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "values = test_x.mul(coefficients)\n",
-    "predictions = values.sum(axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Reset index of y_test\n",
+    "y_test = y_test.reset_index(drop=True)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Make results df to see visual per player\n",
     "results = pd.DataFrame()\n",
-    "results['player'] = test_y['player']\n",
-    "results['actual'] = test_y['y']\n",
-    "results['predictions'] = predictions\n",
-    "results['difference'] = results['actual'] - results['predictions']"
+    "\n",
+    "results['Y_pred'] = y_pred\n",
+    "results['Y_true'] = y_test\n",
+    "results['difference'] = results['Y_true'] - results['Y_pred']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RB_2022 = football.prepare_RB(\"2022\", True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = RB_2022.drop(['y', 'FPTS/G'], axis=1)\n",
+    "\n",
+    "X_selected = X[optimal_columns]\n",
+    "\n",
+    "y_pred = model.predict(X_selected)\n",
+    "\n",
+    "# Make prediction based df for next year\n",
+    "\n",
+    "pred_df = pd.DataFrame()\n",
+    "\n",
+    "pred_df['Player'] = X['Player']\n",
+    "pred_df['2023_pred'] = y_pred\n",
+    "pred_df['2022_ppg'] = RB_2022['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -681,127 +677,168 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>actual</th>\n",
-       "      <th>predictions</th>\n",
-       "      <th>difference</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>2023_pred</th>\n",
+       "      <th>2022_ppg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Josh Jacobs</td>\n",
+       "      <td>18.347052</td>\n",
        "      <td>16.2</td>\n",
-       "      <td>16.365160</td>\n",
-       "      <td>-0.165160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>9.869651</td>\n",
-       "      <td>6.130349</td>\n",
+       "      <td>Derrick Henry</td>\n",
+       "      <td>18.326280</td>\n",
+       "      <td>16.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>16.9</td>\n",
-       "      <td>11.818543</td>\n",
-       "      <td>5.081457</td>\n",
+       "      <td>Nick Chubb</td>\n",
+       "      <td>17.389441</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>15.6</td>\n",
-       "      <td>8.509118</td>\n",
-       "      <td>7.090882</td>\n",
+       "      <td>Jamaal Williams</td>\n",
+       "      <td>16.086992</td>\n",
+       "      <td>12.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>10.741282</td>\n",
-       "      <td>4.258718</td>\n",
+       "      <td>Saquon Barkley</td>\n",
+       "      <td>15.747816</td>\n",
+       "      <td>14.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Miles Sanders</td>\n",
+       "      <td>15.591604</td>\n",
+       "      <td>11.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.875484</td>\n",
-       "      <td>3.824516</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Kenneth Walker III</td>\n",
+       "      <td>14.342616</td>\n",
+       "      <td>11.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.001902</td>\n",
-       "      <td>1.898098</td>\n",
+       "      <th>7</th>\n",
+       "      <td>Ezekiel Elliott</td>\n",
+       "      <td>13.990544</td>\n",
+       "      <td>11.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>2.7</td>\n",
-       "      <td>0.283190</td>\n",
-       "      <td>2.416810</td>\n",
+       "      <th>8</th>\n",
+       "      <td>Austin Ekeler</td>\n",
+       "      <td>13.793742</td>\n",
+       "      <td>15.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.477149</td>\n",
-       "      <td>1.422851</td>\n",
+       "      <th>9</th>\n",
+       "      <td>Tony Pollard</td>\n",
+       "      <td>13.612283</td>\n",
+       "      <td>13.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.019676</td>\n",
-       "      <td>1.980324</td>\n",
+       "      <th>10</th>\n",
+       "      <td>Christian McCaffrey</td>\n",
+       "      <td>13.366073</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Dalvin Cook</td>\n",
+       "      <td>13.275532</td>\n",
+       "      <td>11.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Cordarrelle Patterson</td>\n",
+       "      <td>12.950099</td>\n",
+       "      <td>10.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>James Conner</td>\n",
+       "      <td>12.927175</td>\n",
+       "      <td>11.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Jonathan Taylor</td>\n",
+       "      <td>12.710517</td>\n",
+       "      <td>9.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Travis Etienne Jr.</td>\n",
+       "      <td>12.595031</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Dameon Pierce</td>\n",
+       "      <td>12.267635</td>\n",
+       "      <td>10.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Latavius Murray</td>\n",
+       "      <td>11.684688</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Tyler Allgeier</td>\n",
+       "      <td>11.619918</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Najee Harris</td>\n",
+       "      <td>11.554685</td>\n",
+       "      <td>10.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>76 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    actual  predictions  difference\n",
-       "0     16.2    16.365160   -0.165160\n",
-       "1     16.0     9.869651    6.130349\n",
-       "2     16.9    11.818543    5.081457\n",
-       "3     15.6     8.509118    7.090882\n",
-       "4     15.0    10.741282    4.258718\n",
-       "..     ...          ...         ...\n",
-       "83     4.7     0.875484    3.824516\n",
-       "87     1.9     0.001902    1.898098\n",
-       "89     2.7     0.283190    2.416810\n",
-       "90     1.9     0.477149    1.422851\n",
-       "91     2.0     0.019676    1.980324\n",
-       "\n",
-       "[76 rows x 3 columns]"
+       "                   Player  2023_pred  2022_ppg\n",
+       "0             Josh Jacobs  18.347052      16.2\n",
+       "1           Derrick Henry  18.326280      16.9\n",
+       "2              Nick Chubb  17.389441      15.0\n",
+       "3         Jamaal Williams  16.086992      12.6\n",
+       "4          Saquon Barkley  15.747816      14.2\n",
+       "5           Miles Sanders  15.591604      11.6\n",
+       "6      Kenneth Walker III  14.342616      11.7\n",
+       "7         Ezekiel Elliott  13.990544      11.3\n",
+       "8           Austin Ekeler  13.793742      15.6\n",
+       "9            Tony Pollard  13.612283      13.1\n",
+       "10    Christian McCaffrey  13.366073      16.0\n",
+       "11            Dalvin Cook  13.275532      11.7\n",
+       "12  Cordarrelle Patterson  12.950099      10.3\n",
+       "13           James Conner  12.927175      11.9\n",
+       "14        Jonathan Taylor  12.710517       9.9\n",
+       "15     Travis Etienne Jr.  12.595031      10.0\n",
+       "16          Dameon Pierce  12.267635      10.5\n",
+       "17        Latavius Murray  11.684688       9.1\n",
+       "18         Tyler Allgeier  11.619918       9.0\n",
+       "19           Najee Harris  11.554685      10.7"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.7506439287380253"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results.loc[:, 'difference'].mean()"
+    "sorted_2023 = pred_df.sort_values(by='2023_pred', ascending=False).reset_index(drop=True)\n",
+    "sorted_2023.head(20)"
    ]
   }
  ],
