--- a/WR.ipynb
+++ b/WR.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +536,7 @@
        "[743 rows x 29 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,70 +559,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "{'mean mse': 2.7338537027293506,\n",
-       " 'model': LinearRegression(),\n",
-       " 'features': Index(['TGT', 'Receiving_Yds', 'YBC', 'AIR', '10+ YDS'], dtype='object'),\n",
-       " 'coefficients': array([ 0.55551132,  9.2763548 ,  1.41395234,  1.41395234, -1.85181247])}"
+       "LinearRegression()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "y = WR['y']\n",
     "X = WR.drop(['y', 'FPTS/G'], axis=1)\n",
     "\n",
-    "info = football.getBestFeatures(X, y)\n",
-    "info"
+    "# Perform feature selection\n",
+    "X_selected, optimal_columns = football.getBestFeatures(X, y)\n",
+    "\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Get optimal model\n",
+    "model = football.get_model(X_train, y_train)\n",
+    "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coefficients = info[\"coefficients\"]\n",
-    "features = info['features']\n",
-    "test_y = WR_2021['y']\n",
-    "test_x = WR_2021[features]"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "values = test_x.mul(coefficients)\n",
-    "predictions = values.sum(axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Reset index of y_test\n",
+    "y_test = y_test.reset_index(drop=True)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Make results df to see visual per player\n",
     "results = pd.DataFrame()\n",
-    "results['actual'] = test_y\n",
-    "results['predictions'] = predictions\n",
-    "results['difference'] = results['actual'] - results['predictions']"
+    "\n",
+    "results['Y_pred'] = y_pred\n",
+    "results['Y_true'] = y_test\n",
+    "results['difference'] = results['Y_true'] - results['Y_pred']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WR_2022 = football.prepare_WR(\"2022\", True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dean's feature selection:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = WR_2022.drop(['y', 'FPTS/G'], axis=1)\n",
+    "\n",
+    "X_selected = X[optimal_columns]\n",
+    "\n",
+    "y_pred = model.predict(X_selected)\n",
+    "\n",
+    "# Make prediction based df for next year\n",
+    "\n",
+    "pred_df = pd.DataFrame()\n",
+    "\n",
+    "pred_df['Player'] = X['Player']\n",
+    "pred_df['2023_pred'] = y_pred\n",
+    "pred_df['2022_ppg'] = WR_2022['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -637,128 +685,176 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>actual</th>\n",
-       "      <th>predictions</th>\n",
-       "      <th>difference</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>2023_pred</th>\n",
+       "      <th>2022_ppg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Justin Jefferson</td>\n",
+       "      <td>13.696278</td>\n",
        "      <td>14.2</td>\n",
-       "      <td>10.818171</td>\n",
-       "      <td>3.381829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>13.9</td>\n",
-       "      <td>7.669413</td>\n",
-       "      <td>6.230587</td>\n",
+       "      <td>Tyreek Hill</td>\n",
+       "      <td>13.194079</td>\n",
+       "      <td>13.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13.1</td>\n",
-       "      <td>7.955994</td>\n",
-       "      <td>5.144006</td>\n",
+       "      <td>Davante Adams</td>\n",
+       "      <td>12.073103</td>\n",
+       "      <td>13.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>A.J. Brown</td>\n",
+       "      <td>11.700374</td>\n",
        "      <td>12.4</td>\n",
-       "      <td>9.245615</td>\n",
-       "      <td>3.154385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Stefon Diggs</td>\n",
+       "      <td>11.648549</td>\n",
        "      <td>12.4</td>\n",
-       "      <td>9.066047</td>\n",
-       "      <td>3.333953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Ja'Marr Chase</td>\n",
+       "      <td>11.009750</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>1.180759</td>\n",
-       "      <td>4.219241</td>\n",
+       "      <th>6</th>\n",
+       "      <td>CeeDee Lamb</td>\n",
+       "      <td>10.921314</td>\n",
+       "      <td>11.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.644191</td>\n",
-       "      <td>2.055809</td>\n",
+       "      <th>7</th>\n",
+       "      <td>Mike Evans</td>\n",
+       "      <td>10.718752</td>\n",
+       "      <td>9.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.589732</td>\n",
-       "      <td>2.910268</td>\n",
+       "      <th>8</th>\n",
+       "      <td>Jaylen Waddle</td>\n",
+       "      <td>10.699261</td>\n",
+       "      <td>10.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.469343</td>\n",
-       "      <td>1.730657</td>\n",
+       "      <th>9</th>\n",
+       "      <td>Amon-Ra St. Brown</td>\n",
+       "      <td>9.995540</td>\n",
+       "      <td>10.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>3.7</td>\n",
-       "      <td>0.010679</td>\n",
-       "      <td>3.689321</td>\n",
+       "      <th>10</th>\n",
+       "      <td>Tee Higgins</td>\n",
+       "      <td>9.891824</td>\n",
+       "      <td>9.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Terry McLaurin</td>\n",
+       "      <td>9.859440</td>\n",
+       "      <td>8.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>DeVonta Smith</td>\n",
+       "      <td>9.817522</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Amari Cooper</td>\n",
+       "      <td>9.794233</td>\n",
+       "      <td>9.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Christian Watson</td>\n",
+       "      <td>9.686061</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>George Pickens</td>\n",
+       "      <td>9.664543</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Garrett Wilson</td>\n",
+       "      <td>9.483186</td>\n",
+       "      <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Christian Kirk</td>\n",
+       "      <td>9.461563</td>\n",
+       "      <td>9.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Tyler Lockett</td>\n",
+       "      <td>9.442380</td>\n",
+       "      <td>9.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>DK Metcalf</td>\n",
+       "      <td>9.330398</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>77 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    actual  predictions  difference\n",
-       "0     14.2    10.818171    3.381829\n",
-       "1     13.9     7.669413    6.230587\n",
-       "2     13.1     7.955994    5.144006\n",
-       "3     12.4     9.245615    3.154385\n",
-       "4     12.4     9.066047    3.333953\n",
-       "..     ...          ...         ...\n",
-       "89     5.4     1.180759    4.219241\n",
-       "90     3.7     1.644191    2.055809\n",
-       "95     3.5     0.589732    2.910268\n",
-       "96     3.2     1.469343    1.730657\n",
-       "98     3.7     0.010679    3.689321\n",
-       "\n",
-       "[77 rows x 3 columns]"
+       "               Player  2023_pred  2022_ppg\n",
+       "0    Justin Jefferson  13.696278      14.2\n",
+       "1         Tyreek Hill  13.194079      13.1\n",
+       "2       Davante Adams  12.073103      13.9\n",
+       "3          A.J. Brown  11.700374      12.4\n",
+       "4        Stefon Diggs  11.648549      12.4\n",
+       "5       Ja'Marr Chase  11.009750      12.0\n",
+       "6         CeeDee Lamb  10.921314      11.4\n",
+       "7          Mike Evans  10.718752       9.9\n",
+       "8       Jaylen Waddle  10.699261      10.8\n",
+       "9   Amon-Ra St. Brown   9.995540      10.1\n",
+       "10        Tee Higgins   9.891824       9.9\n",
+       "11     Terry McLaurin   9.859440       8.9\n",
+       "12      DeVonta Smith   9.817522       9.4\n",
+       "13       Amari Cooper   9.794233       9.9\n",
+       "14   Christian Watson   9.686061       8.8\n",
+       "15     George Pickens   9.664543       6.7\n",
+       "16     Garrett Wilson   9.483186       7.8\n",
+       "17     Christian Kirk   9.461563       9.3\n",
+       "18      Tyler Lockett   9.442380       9.6\n",
+       "19         DK Metcalf   9.330398       8.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
+    "sorted_2023 = pred_df.sort_values(by='2023_pred', ascending=False).reset_index(drop=True)\n",
+    "sorted_2023.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.676006889028314"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results.loc[:, 'difference'].mean()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
