--- a/blog_post.ipynb
+++ b/blog_post.ipynb
@@ -24,6 +24,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our group attempted to create a model that would take in a players statistics for one season and would output a projected fantasy score for the following year. We wanted to create a model that could be trained on several years worth of data and would choose the model that was best for that dataset. We wanted split up each major fantasy football position into its own model in case there was one model that was better for one position vs. another. We wound up scraping our data online so it will be easy in the future to add in years and incorporate them into our training data. We ultimately were successful in creating this setup and obtaining results that seem relatively accurate to us. We would like to compare our results vs. other prediction algorithms out there for predicting fantasy football performance at some point."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/johnny-kantaros/fantasy-football"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Introduction\n",
     "----"
    ]
@@ -110,6 +126,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We wound up scraping most of our data online from various websites that provide nfl player statistics. We tested various websites but the one with the most data that was easily available to scrape was from a website called FantasyPros. We would pass in variables to the URL to indicate which position and year we wanted as follows:\n",
+    "\n",
+    "https://www.fantasypros.com/nfl/advanced-stats-qb.php?year=%7Byear%7D\n",
+    "https://www.fantasypros.com/nfl/stats/{pos}.php?year={year}\n",
+    "\n",
+    "We wound up training our model on every year except for the most recent. This allowed us to test our results against the most recent years worth of data. We evaluated our models based on MSE. If a model provided a better MSE than the model we had previously saved as the best, we would update and now return the new type of model. Our biggest hurdle was aquiring enough data to run an effective model as there are only 32 teams and some positions only have 1 that gets points. We had to take several years worth to help us overcome this challenge.\n",
+    "\n",
+    "\n",
+    "\n",
+    "What features did we end up going with???\n",
+    "---\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Results\n",
     "----"
    ]
@@ -173,6 +207,14 @@
     "Who led the writing of which parts of the blog post?\n",
     "\n",
     "Etc."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ethan Coomber: I spent a lot of time working on cleaning data and developing the model. We had to make sure we had sufficient data and I tried to ensure we had clean, usable data. Once I was able to ensure that, I spent my time working on developing a way to choose the best model. This took time as we had to research various models and determine what kind of model would be most effective in helping us predict performance. We then implemented the models we thought had potential and had to have a way to select the best one."
    ]
   },
   {
